--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -1,4 +1,11 @@
-#{extends 'main.html' /}
-#{set title:'Home' /}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>#{get 'title' /}</title>
 
-#{welcome /}
+    <link rel="stylesheet" href="@{'/public/touch/resources/css/sencha-touch.css'}" type="text/css">
+    <script type="text/javascript" src="@{'/public/touch/sencha-touch-all.js'}"></script>
+    <script type="text/javascript" src="@{'/public/javascripts/app.js'}"></script>
+    </head>
+<body></body>
+</html>
