--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>#{get 'title' /}</title>
-
-    <link rel="stylesheet" href="@{'/public/touch/resources/css/sencha-touch.css'}" type="text/css">
-    <script type="text/javascript" src="@{'/public/touch/sencha-touch-all.js'}"></script>
+    <meta name="viewport" content="width=device-width initial-scale=1.0 maximum-scale=1.0 minimum-scale=1.0 user-scalable=0" />
+    <link rel="stylesheet" href="@{'/public/touch/resources/css/apple.css'}" type="text/css" />
+    <script type="text/javascript" src="@{'/public/touch/sencha-touch-all-debug.js'}"></script>
+    <script>
+      Ext.Loader.setConfig({enabled:true});
+    </script>
     <script type="text/javascript" src="@{'/public/javascripts/app.js'}"></script>
-    </head>
+</head>
 <body></body>
 </html>
